force-app/main/default/objects/PAG_Idempotency__c.object
<CustomObject>
    <fields>
        <fullName>PAG_Key__c</fullName>
        <externalId>true</externalId>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PAG_PersonaAggHistory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Persona Aggregation History</label>
        <referenceTo>PAG_Persona_Aggregation_History__c</referenceTo>
        <relationshipLabel>Idempotency</relationshipLabel>
        <relationshipName>Idempotency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PAG_PersonaHistory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Persona History</label>
        <referenceTo>PAG_Persona_History__c</referenceTo>
        <relationshipLabel>Idempotency</relationshipLabel>
        <relationshipName>Idempotency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PAG_Persona_Aggregation_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Persona Aggregation History</label>
        <referenceTo>PAG_Persona_Aggregation_History__c</referenceTo>
        <relationshipLabel>Idempot</relationshipLabel>
        <relationshipName>Idempot</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PAG_ProcessedAt__c</fullName>
        <label>Processed At</label>
        <type>DateTime</type>
    </fields>
    <label>Idempotency</label>
    <nameField>
        <displayFormat>IDEM-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Idempotency</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>